--- a/react-voting-app/src/App.css
+++ b/react-voting-app/src/App.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  background-color: #f1f1f1;
+  height: 400px;
+  background-color: #ffffff;
 }
 
 .welcome-message {
