--- a/react-voting-app/src/Components/RegistrationForm.css
+++ b/react-voting-app/src/Components/RegistrationForm.css
@@ -1,10 +1,10 @@
 /* Registration form container */
-.registration-container {
+/* .registration-container {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 600px;
     text-align: center;
     box-sizing: border-box;
     margin: auto;
@@ -14,36 +14,96 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+} */
+
+.registration-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 600px;
+    text-align: center;
+    box-sizing: border-box;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+    
+    
 }
 
-.registration-container h2 {
+.registration-container h1 {
+    color: #000000;
+    margin-top: 20px;
     margin-bottom: 20px; /* Adds space below the heading */
     text-align: center;  /* Centers the heading */
 }
 
 /* Input fields */
-input {
+/* input {
     width: 100%;
     padding: 15px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+} */
+
+.registration-container input[type="text"],
+.registration-container input[type="password"],
+.registration-container input[type="email"] {
+    margin-top: 20px;
+    width: 80%;
+    padding: 15px;
+    margin: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
+
+.registration-container input[type="date"] {
+    margin-top: 20px;
+    width: 80%;
+    padding: 15px;
+    margin: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.registration-container p {
+    color:rgb(68, 70, 70);
+    text-align: left;
+    margin-left: 55px;
+}
 /* Submit button */
-button {
-    color:  #218838;
+button[type="submit"]{
+    background-color: #28a745;
+    color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 100%;
+    width: 80%;
     font-size: 14px;
     margin-top: 10px;
 }
 
-button:hover {
+button[type="button"]{
+    
+    color: rgb(0, 0, 0);
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 80%;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+button[type="submit"]:hover {
     background-color: #218838;
     color: white;
 }
